# LLM_Finetuning

./: phi2-orpo.ipynb  pyproject.toml
